--- a/Rubiks.ipynb
+++ b/Rubiks.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "faces = colors = list(range(stop))\n",
+    "faces = colors = list(range(6))\n",
     "# construct a solved cube\n",
     "cube = np.ones((6,3,3))\n",
     "for face in range(6):\n",
