add solved cube, faces, colors in Rubiks.ipnyb

--- a/Rubiks.ipynb
+++ b/Rubiks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "aaea2b42-7c3c-4a55-9ea5-2ada3e2ccdaf",
    "metadata": {},
    "outputs": [],
@@ -15,9 +15,9 @@
    "id": "4a29d8c4-1bc2-4c2e-b21c-1830af34f701",
    "metadata": {},
    "source": [
-    "### Rubik's Cube Encoding\n",
+    "## Rubik's Cube Encoding\n",
     "\n",
-    "## Colors\n",
+    "### Colors\n",
     "There are 6 colors in the cube. They will be encoded as follows:\n",
     "\n",
     "- `0` represent the color red\n",
@@ -27,17 +27,17 @@
     "- `4` represent the color orange\n",
     "- `5` represent the color white\n",
     "\n",
-    "## Faces\n",
+    "### Faces\n",
     "A Rubik's Cube has 6 sides. Imagine you are looking directly at one of the faces ('Front'). There are 2 faces on the left and right ('Left', 'Right'), 2 faces directly above and below ('Up', 'Down'), and 1 face behind ('Back')\n",
     "\n",
     "Each face of the Cube will be represented as a 3x3 array:\n",
     "\n",
-    "- `0` represents the 'Front' face or the face you are looking at\n",
-    "- `1` represents the 'Left' face\n",
-    "- `2` represents the 'Right' face\n",
-    "- `3` represents the 'Up' face\n",
-    "- `4` represents the 'Down' face\n",
-    "- `5` represents the 'Back' face\n",
+    "- `0` represents the 'front' face or the face you are looking at\n",
+    "- `1` represents the 'left' face\n",
+    "- `2` represents the 'right' face\n",
+    "- `3` represents the 'up' face\n",
+    "- `4` represents the 'down' face\n",
+    "- `5` represents the 'back' face\n",
     "\n",
     "The whole cube can be represented as a 6x3x3 array:\n",
     "\n",
@@ -46,23 +46,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "36a36063-155c-49e2-8e8f-ad710ac9e2f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# construct a solved cube\u001b[39;00m\n\u001b[0;32m      4\u001b[0m cube \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones((\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m))\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m face,color \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m6\u001b[39m),\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m6\u001b[39m)]:\n\u001b[0;32m      6\u001b[0m     cube[face,:,:] \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m color\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
    "source": [
-    "faces = colors = list(range(6))\n",
+    "colors = ['red','blue','green','yellow','oragne','white']\n",
+    "faces = ['front','left','right','up','down','back']\n",
     "# construct a solved cube\n",
     "cube = np.ones((6,3,3))\n",
-    "for face in range(6):\n",
-    "    cube[face,:,:] *= face"
+    "for i in range(6):\n",
+    "    cube[i,:,:] *= i "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "85c7c99f-54b8-46e0-86c2-b22aab8c9c52",
    "metadata": {},
-   "source": []
+   "source": [
+    "print(cube)"
+   ]
   }
  ],
  "metadata": {
