--- a/rubiks.ipynb
+++ b/rubiks.ipynb
@@ -64,7 +64,8 @@
    "id": "85c7c99f-54b8-46e0-86c2-b22aab8c9c52",
    "metadata": {},
    "source": [
-    "print(cube)"
+    "### Moves\n",
+    "\n"
    ]
   }
  ],
