--- a/rubiks.ipynb
+++ b/rubiks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aaea2b42-7c3c-4a55-9ea5-2ada3e2ccdaf",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,12 @@
     "\n",
     "Each face of the Cube will be represented as a 3x3 array:\n",
     "\n",
-    "- `0` represents the 'front' face or the face you are looking at\n",
-    "- `1` represents the 'left' face\n",
-    "- `2` represents the 'right' face\n",
-    "- `3` represents the 'up' face\n",
-    "- `4` represents the 'down' face\n",
-    "- `5` represents the 'back' face\n",
+    "- `0` or 'F' represents the 'front' face or the face you are looking at\n",
+    "- `1` or 'L' represents the 'left' face\n",
+    "- `2` or 'R' represents the 'right' face\n",
+    "- `3` or 'U' represents the 'up' face\n",
+    "- `4` or 'D' represents the 'down' face\n",
+    "- `5` or 'B' represents the 'back' face\n",
     "\n",
     "The whole cube can be represented as a 6x3x3 array:\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36a36063-155c-49e2-8e8f-ad710ac9e2f5",
    "metadata": {},
    "outputs": [],
@@ -64,8 +64,26 @@
    "id": "85c7c99f-54b8-46e0-86c2-b22aab8c9c52",
    "metadata": {},
    "source": [
-    "### Moves\n",
-    "\n"
+    "### Moves:\n",
+    "\n",
+    "#### Rotating Faces\n",
+    "Each face of the cube can be rotated in one of three ways:\n",
+    "- `0` represents rotating the face clockwise\n",
+    "- `1` represents rotating the face anti-clockwise\n",
+    "- `2` represents rotating the face 180 degrees (or 2 clockwise/anti-clockwise rotations in a row)\n",
+    "\n",
+    "With 6 total faces, with 3 moves per face, there are a total of 18 moves. 'F0' would be rotating the front face clockwise. 'L1' would be to rotate the left face anti-clockwise as if you are facing the cube."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4bf98804-0575-47e2-b97a-45c78bb9fcbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate_cube(cube, face, roatation):\n",
+    "    return"
    ]
   }
  ],
