update moves in rubiks.ipnyb and README.md

--- a/rubiks.ipynb
+++ b/rubiks.ipynb
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add color and face labels\n",
     "colors = ['red','blue','green','yellow','oragne','white']\n",
     "faces = ['front','left','right','up','down','back']\n",
     "# construct a solved cube\n",
@@ -72,7 +73,9 @@
     "- `1` represents rotating the face anti-clockwise\n",
     "- `2` represents rotating the face 180 degrees (or 2 clockwise/anti-clockwise rotations in a row)\n",
     "\n",
-    "With 6 total faces, with 3 moves per face, there are a total of 18 moves. 'F0' would be rotating the front face clockwise. 'L1' would be to rotate the left face anti-clockwise as if you are facing the cube."
+    "With 6 total faces, with 3 moves per face, there are a total of 18 moves. 'F0' would be rotating the front face clockwise. 'L1' would be to rotate the left face anti-clockwise as if you are facing the left face.\n",
+    "\n",
+    "Every rotation would change the colors on all the other faces except the face directly opposite to the face being rotated. Rotating the front face would not effect the back face, the right face would not change the left face and rotating the up face woould not change the down face."
    ]
   },
   {
@@ -82,7 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rotate_cube(cube, face, roatation):\n",
+    "# TODO: add methods to rotate faces - update encoding if needed\n",
+    "\n",
+    "def rotate_face(cube, face, roatation):\n",
     "    return"
    ]
   }
