--- a/rubiks.ipynb
+++ b/rubiks.ipynb
@@ -55,7 +55,7 @@
     "colors = ['red','blue','green','yellow','oragne','white']\n",
     "faces = ['front','left','right','up','down','back']\n",
     "# construct a solved cube\n",
-    "cube = np.ones((6,3,3))\n",
+    "solved_cube = np.ones((6,3,3))\n",
     "for i in range(6):\n",
     "    cube[i,:,:] *= i "
    ]
@@ -80,16 +80,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "4bf98804-0575-47e2-b97a-45c78bb9fcbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 21 31]\n",
+      " [21 22 23]\n",
+      " [31 32 33]]\n",
+      "[[33 32 31]\n",
+      " [23 22 21]\n",
+      " [31 21 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: add methods to rotate faces - update encoding if needed\n",
-    "\n",
+    "a = np.array([[11,21,31],[21,22,23],[31,32,33]])\n",
+    "print(a)\n",
+    "print(np.rot90(a,k=2))\n",
     "def rotate_face(cube, face, roatation):\n",
+    "    \n",
     "    return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c61d4dd6-67da-492b-b440-09235432ffac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
