implemented rotate_face() in rubiks.ipnyb

--- a/rubiks.ipynb
+++ b/rubiks.ipynb
@@ -33,11 +33,11 @@
     "Each face of the Cube will be represented as a 3x3 array:\n",
     "\n",
     "- `0` or 'F' represents the 'front' face or the face you are looking at\n",
-    "- `1` or 'L' represents the 'left' face\n",
-    "- `2` or 'R' represents the 'right' face\n",
-    "- `3` or 'U' represents the 'up' face\n",
-    "- `4` or 'D' represents the 'down' face\n",
-    "- `5` or 'B' represents the 'back' face\n",
+    "\n",
+    "- `2` or 'L' represents the 'left' face\n",
+    "- `3` or 'R' represents the 'right' face\n",
+    "- `4` or 'U' represents the 'up' face\n",
+    "- `5` or 'D' represents the 'down' face\n",
     "\n",
     "The whole cube can be represented as a 6x3x3 array:\n",
     "\n",
@@ -69,7 +69,7 @@
     "\n",
     "#### Rotating Faces\n",
     "Each face of the cube can be rotated in one of three ways:\n",
-    "- `0` represents rotating the face clockwise\n",
+    "- `-1` represents rotating the face clockwise\n",
     "- `1` represents rotating the face anti-clockwise\n",
     "- `2` represents rotating the face 180 degrees (or 2 clockwise/anti-clockwise rotations in a row)\n",
     "\n",
@@ -80,40 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "4bf98804-0575-47e2-b97a-45c78bb9fcbc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[11 21 31]\n",
-      " [21 22 23]\n",
-      " [31 32 33]]\n",
-      "[[33 32 31]\n",
-      " [23 22 21]\n",
-      " [31 21 11]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# TODO: add methods to rotate faces - update encoding if needed\n",
-    "a = np.array([[11,21,31],[21,22,23],[31,32,33]])\n",
-    "print(a)\n",
-    "print(np.rot90(a,k=2))\n",
-    "def rotate_face(cube, face, roatation):\n",
-    "    \n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c61d4dd6-67da-492b-b440-09235432ffac",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rotation_mapping = np.array([[2,4,3,5],[3,4,2,5],[1,4,0,5],[0,4,1,5],[2,1,3,0],[2,0,3,1]])\n",
+    "# function to rotate the cube\n",
+    "def rotate_face(cube,face, roatation):\n",
+    "    # rotate the face\n",
+    "    cube[face,:,:] = np.rot90(cube[face,:,:], k=rotation)\n",
+    "    # rotate sides\n",
+    "    rotate_order = rotation_mapping[face,:]\n",
+    "    return rotate_sides(cube,rotate_order,rotation)\n",
+    "    \n",
+    "def rotate_sides(cube,rotate_order,rotation):\n",
+    "    #TODO: implemet rotate_sides\n",
+    "    return\n",
+    "\n",
+    "#a = np.array([[[11,12,13],[21,22,23],[31,32,33]],[[11,12,13],[21,22,23],[31,32,33]],[[11,12,13],[21,22,23],[31,32,33]]])\n",
+    "#a[1,:,:] = np.rot90(a[1,:,:], k=-1)\n",
+    "#print(a)"
+   ]
   }
  ],
  "metadata": {
